# daily-hot-news

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.rsshub.yml  pyproject.toml  wrangler.jsonc
.github/workflows/: deploy.yml
launchd/: com.lx.daily-hot-news.plist
output/: index.html  style.css
output/archive/: 2026-06-13.html  2026-06-14.html  2026-06-15.html  2026-06-16.html  2026-06-17.html  2026-06-18.html  2026-06-19.html  2026-06-21.html  2026-06-22.html  2026-06-23.html  2026-06-24.html  2026-06-25.html  2026-06-26.html  2026-06-27.html  2026-06-28.html  2026-06-29.html  2026-06-30.html  2026-07-01.html  2026-07-02.html  2026-07-03.html  2026-07-04.html  2026-07-05.html  2026-07-06.html  2026-07-07.html  2026-07-08.html  2026-07-09.html  2026-07-10.html  2026-07-11.html  2026-07-12.html  2026-07-13.html  2026-07-14.html  2026-07-15.html  2026-07-16.html  2026-07-17.html  2026-07-18.html  2026-07-19.html  2026-07-20.html  2026-07-21.html  2026-07-22.html  2026-07-23.html  (+2 more)
scripts/: setup_rsshub.sh  test_collect.py
src/: config.py  main.py
src/collectors/: currents.py  github_trending.py  rss_collector.py
src/processor/: deduper.py  llm.py  summarizer.py
src/renderer/: html_builder.py
src/renderer/templates/: archive.html  base.html
