[project]
name = "daily-hot-news"
version = "0.1.0"
description = "每日热点新闻自动聚合系统：AI/科技、国际形势、国内形势"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.28",
    "anthropic>=0.49",
    "pydantic-settings>=2.7",
    "jinja2>=3.1",
    "python-dateutil>=2.9",
    "beautifulsoup4>=4.12",
    "levenshtein>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
